Mavenization step 8: Finishing, temporarily disabled UI tests. Reenabled target platform for UI tests.